# marketresearch

./: .env.example  .gitignore  AGENTS.md  README.md
.superpowers/brainstorm/80475-1773648910/: .server-info  layout-options.html
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260316_0001_initial_schema.py  20260318_0002_add_platform_url_summary.py  20260318_0003_add_stage_detail_json.py
backend/src/app/: __init__.py  main.py
backend/src/app/api/: routes.py
backend/src/app/core/: config.py  logging.py
backend/src/app/db/: session.py
backend/src/app/models/: __init__.py  research.py
backend/src/app/schemas/: research.py
backend/src/app/services/: ark_client.py  crawl_service.py  discovery_service.py  kimi_client.py  llm_client.py  normalize_service.py  page_fetch_service.py  research_intake_service.py  research_service.py
backend/src/app/workflows/: research_workflow.py
backend/tests/: test_api.py  test_llm_client.py  test_logging.py  test_research_service.py  test_services.py  test_workflow.py
docs/superpowers/plans/: 2026-03-16-llm-provider-plan.md  2026-03-16-market-research-mvp.md  2026-03-17-backend-debug-logging-plan.md  2026-03-17-llm-platform-discovery-plan.md  2026-03-17-volcengine-web-search-discovery-plan.md  2026-03-18-analysis-results-order-plan.md  (+10 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/tests/: app.test.tsx
(+21 files in other folders)
